--- a/assessment.html
+++ b/assessment.html
@@ -7,7 +7,7 @@
     <title>aisare-cryptoが作ったあなたのいいところ診断</title>
     <meta name="twitter:card" content="summary"/>
     <meta property="og:url" content="https://aisare-crypto.github.io/assessment/assessment.html"/>
-    <meta property="og:title" content="あなたのいいところ診断"/>
+    <meta property="og:title" content="aisare-cryptoが作ったあなたのいいところ診断"/>
     <meta property="og:description" content="N予備校プログラミング入門コースで制作した、「あなたのいいところ診断」サイトです。"/>
     <link rel="stylesheet" href="assessment.css">
 </head>
